Fixing overflowing titles in boxes

--- a/css/sass/_content.scss
+++ b/css/sass/_content.scss
@@ -533,6 +533,7 @@ ui-view> div.container {
 			position: relative;
 			font-family: latolight;
 			font-weight: bold;
+			white-space: nowrap;
 		}
 		h3 {
 			z-index: 1;
